fix contrast

--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,7 @@ button:active {
 }
 
 .card:hover {
-  background-color: #227150;
+  background-color: #60c095;
   scale: 1.1;
   border: 2px solid #81858a;
 }
